@@ -2,5 +2,5 @@
 /.build/
 Makefile
 /pm_to_blib
-Dist-Zilla-PluginBundle-CJM-*.tar.gz
-Dist-Zilla-PluginBundle-CJM-*/
+Dist-Zilla-Plugins-CJM-*.tar.gz
+Dist-Zilla-Plugins-CJM-*/
