@@ -15,10 +15,8 @@ corpus/archives/DZT-Sample-0.03.tar.gz
 lib/Dist/Zilla/Plugin/ArchiveRelease.pm
 lib/Dist/Zilla/Plugin/GitVersionCheckCJM.pm
 lib/Dist/Zilla/Plugin/ModuleBuild/Custom.pm
-lib/Dist/Zilla/Plugin/PodLoom.pm
 lib/Dist/Zilla/Plugin/TemplateCJM.pm
 lib/Dist/Zilla/Plugin/VersionFromModule.pm
-lib/Dist/Zilla/PluginBundle/CJM.pm
 lib/Dist/Zilla/Role/ModuleInfo.pm
 t/00-compile.t
 t/arcrel.t
