@@ -12,7 +12,7 @@
 ^blib/
 \bcjm_
 ^pm_to_blib$
-^Dist-Zilla-PluginBundle-CJM-\d
+^Dist-Zilla-Plugins-CJM-\d
 ^_build\b
 ^Build$
 ^Build.bat$
