@@ -1,19 +1,22 @@
-Dist-Zilla-PluginBundle-CJM
-===========================
+Dist-Zilla-Plugins-CJM
+======================
 
-Dist-Zilla-PluginBundle-CJM is a collection of plugins I've written
-for Dist::Zilla.  There isn't actually a @CJM bundle yet, because I'm
-still working out how I want to use Dist::Zilla.
+Dist-Zilla-Plugins-CJM is a collection of plugins I've written for
+Dist::Zilla.  The plugins here used to be distributed in
+Dist-Zilla-PluginBundle-CJM, but when I actually wrote @CJM, I decided
+that it had too many prerequisites to be distributed with them.
 
 I've written some other plugins that are distributed separately,
 because they had different prerequisites.  The ones collected here
 have fairly simple prerequisites, and I didn't want to have to make
 separate distributions for all of them.
 
-This is a Git repository where development of Dist-Zilla-PluginBundle-CJM
+This is a Git repository where development of Dist-Zilla-Plugins-CJM
 takes place.  For more information, visit
-[Dist-Zilla-PluginBundle-CJM on CPAN](http://search.cpan.org/dist/Dist-Zilla-PluginBundle-CJM/).
-
+[Dist-Zilla-Plugins-CJM on CPAN](http://search.cpan.org/dist/Dist-Zilla-Plugins-CJM/).
+This repository used to be called
+[dist-zilla-pluginbundle-cjm](http://github.com/madsen/dist-zilla-pluginbundle-cjm),
+but that now contains only @CJM.
 
 
 Copyright and License
