@@ -1,54 +1,27 @@
 ;							-*-conf-windows-*-
-name    = Dist-Zilla-PluginBundle-CJM
+name    = Dist-Zilla-Plugins-CJM
 abstract = CJM's plugins for Dist::Zilla
 ;' Emacs syntax highlighting gets confused
 author  = Christopher J. Madsen <perl@cjmweb.net>
 license = Perl_5
 copyright_holder = Christopher J. Madsen
-[VersionFromModule]
 
-[GatherDir]
-[PruneCruft]
-[ManifestSkip]
-[MetaYAML]
-[License]
+version = 0.08
+
 [=tools::CompileTests]
-[PodSyntaxTests]
-[PodCoverageTests]
-[ExtraTests]
-[PodLoom]
-data = tools/loom.pl
-[MakeMaker]
-[MatchManifest]
-[TemplateCJM]
-[GitVersionCheckCJM]
+[@CJM]
+manual_version = 1
 
 [MetaNoIndex]
 dir = corpus
 
-[Repository]
-git_remote = github
-
-[@Git]
-allow_dirty = Changes
-commit_msg  = Updated Changes for %{MMMM d, yyyy}d release of %v
-tag_format  = %v
-tag_message = Tagged %N %v
-push_to     = github
-
-[UploadToCPAN]
-[ArchiveRelease]
-directory = cjm_releases
-
 [Prereq]
 Dist::Zilla               = 2 ; API changes
 File::Temp                = 0
-Hash::Merge::Simple       = 0
 List::Util                = 0
 Module::Build::ModuleInfo = 0.28
 Moose                     = 0.65 ; attr fulfills requires
 Moose::Autobox            = 0.09 ; flattten
 Path::Class               = 0
-Pod::Loom                 = 0
 Scalar::Util              = 0
 autodie                   = 0
