@@ -17,7 +17,7 @@ package Dist::Zilla::Plugin::VersionFromModule;
 # ABSTRACT: Get distribution version from its main_module
 #---------------------------------------------------------------------
 
-our $VERSION = '0.05';
+our $VERSION = '0.08';
 # This file is part of {{$dist}} {{$dist_version}} ({{$date}})
 
 use Moose;
